# EutherGate

./: .env.example  .gitignore  Cargo.toml  README.md  start.sh
config/: forge-sway.conf
deploy/coturn/: install-server.sh
deploy/systemd/: euthergate-forge.service  euthergate-tmux.service  euthergate-tunnel.service  euthergate.service
docs/: architecture.md  eutherbrowse-first-slice.md  eutherbrowse-latency-restart-handoff-2026-07-23.md  eutherbrowse-low-latency-slice.md  eutherbrowse-pointer-restart-handoff-2026-07-23.md  eutherbrowse-pointer-slice.md  eutherbrowse-restart-handoff-2026-07-23.md  eutherbrowse-stability-restart-handoff-2026-07-23.md  eutherbrowse-stability-slice.md  eutherbrowse-swgl-restart-handoff-2026-07-23.md  https-remote-desktop-alternatives-2026-07-15.md  mobile-desktop-keyboard-handoff-2026-07-18.md  network-transport-test-log.md  protocol-picker-handoff-2026-07-15.md  restart-diagnostic-handoff-2026-07-16.md  tmux-terminal-sessions-2026-07-19.md  turn-relay.md
scripts/: configure-turn-client.sh  forge-status.sh  install-user-services.sh  run-forge-session.sh  run-service.sh  smoke_terminal.py  smoke_vnc_desktop.py  smoke_webrtc.py  smoke_wss_desktop.py  smoke_wss_viewer_lifecycle.py  webrtc_desktop.py  wss_desktop.py
src/: main.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: main.ts  novnc.d.ts  style.css
